Add modals, fix slider

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-   "name": "starterFullStack-frontend",
+   "name": "starterfullstack",
    "version": "1.0.0",
    "description": "Starter FullStack",
    "main": "index.js",
