--- a/backend/package.json
+++ b/backend/package.json
@@ -22,7 +22,7 @@
       "nodemailer": "^6.5.0",
       "npm-check-updates": "^11.3.0",
       "react": "^17.0.2",
-      "react-dom": "^17.0.2",
+      "react-dom": "^17.0.2"
    },
    "devDependencies": {
       "@typescript-eslint/eslint-plugin": "^4.20.0",
