--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,17 +15,22 @@
       "@apollo/client": "^3.3.11",
       "@apollo/link-error": "^2.0.0-beta.3",
       "@apollo/react-ssr": "^4.0.0",
+      "@chakra-ui/react": "^1.5.1",
       "@tippyjs/react": "^4.2.1",
       "apollo-upload-client": "^14.1.3",
+      "axios": "^0.21.1",
       "babel-core": "^7.0.0-bridge.0",
       "date-fns": "^2.17.0",
+      "dotenv": "^8.2.0",
       "downshift": "^6.1.0",
+      "formik": "^2.2.6",
       "graphql": "^15.5.0",
       "graphql-tag": "^2.11.0",
       "graphql-upload": "^11.0.0",
       "lodash.debounce": "^4.0.8",
       "next": "^10.0.7",
       "next-with-apollo": "^5.1.1",
+      "nodemailer": "^6.5.0",
       "nprogress": "^0.2.0",
       "prop-types": "^15.7.2",
       "react": "^17.0.1",
@@ -39,7 +44,8 @@
       "react-transition-group": "^4.4.1",
       "slick-carousel": "^1.8.1",
       "styled-components": "^5.2.1",
-      "waait": "^1.0.5"
+      "waait": "^1.0.5",
+      "yup": "^0.32.9"
    },
    "devDependencies": {
       "@apollo/react-testing": "^4.0.0",
