--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
       "dotenv": "^10.0.0",
       "downshift": "^6.1.3",
       "formik": "^2.2.9",
+      "framer-motion": "^4.1.17",
       "graphql": "^15.5.0",
       "graphql-tag": "^2.12.4",
       "graphql-upload": "^12.0.0",
@@ -40,7 +41,6 @@
       "react-icons": "^4.2.0",
       "react-scroll": "^1.8.2",
       "react-slick": "^0.28.1",
-      "react-spring": "^9.2.1",
       "react-transition-group": "^4.4.2",
       "slick-carousel": "^1.8.1",
       "styled-components": "^5.3.0",
