--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
       "@apollo/link-error": "^2.0.0-beta.3",
       "@apollo/react-ssr": "^4.0.0",
       "@chakra-ui/react": "^1.6.3",
+      "@tailwindcss/line-clamp": "^0.2.1",
       "@tippyjs/react": "^4.2.5",
       "apollo-upload-client": "^15.0.0",
       "axios": "^0.21.1",
