--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,37 +12,40 @@
    "author": "",
    "license": "ISC",
    "dependencies": {
-      "@apollo/client": "^3.3.19",
+      "@apollo/client": "^3.4.5",
       "@apollo/link-error": "^2.0.0-beta.3",
       "@apollo/react-ssr": "^4.0.0",
-      "@chakra-ui/react": "^1.6.3",
+      "@chakra-ui/react": "^1.6.5",
+      "@plaiceholder/next": "^2.1.0",
       "@tailwindcss/line-clamp": "^0.2.1",
       "@tippyjs/react": "^4.2.5",
-      "apollo-upload-client": "^15.0.0",
+      "apollo-upload-client": "^16.0.0",
       "axios": "^0.21.1",
       "babel-core": "^7.0.0-bridge.0",
-      "date-fns": "^2.22.1",
+      "date-fns": "^2.23.0",
       "dotenv": "^10.0.0",
-      "downshift": "^6.1.3",
+      "downshift": "^6.1.6",
       "formik": "^2.2.9",
       "framer-motion": "^4.1.17",
-      "graphql": "^15.5.0",
-      "graphql-tag": "^2.12.4",
+      "graphql": "^15.5.1",
+      "graphql-tag": "^2.12.5",
       "graphql-upload": "^12.0.0",
       "lodash.debounce": "^4.0.8",
       "next": "^10.2.3",
-      "next-with-apollo": "^5.1.1",
-      "nodemailer": "^6.6.1",
+      "next-with-apollo": "^5.2.1",
+      "nodemailer": "^6.6.3",
       "nprogress": "^0.2.0",
+      "plaiceholder": "^2.0.1",
       "prop-types": "^15.7.2",
       "react": "^17.0.2",
       "react-device-detect": "^1.17.0",
       "react-dom": "^17.0.2",
       "react-html-parser": "^2.0.2",
       "react-icons": "^4.2.0",
-      "react-scroll": "^1.8.2",
+      "react-scroll": "^1.8.3",
       "react-slick": "^0.28.1",
       "react-transition-group": "^4.4.2",
+      "sharp": "^0.28.3",
       "slick-carousel": "^1.8.1",
       "styled-components": "^5.3.0",
       "waait": "^1.0.5",
@@ -50,20 +53,20 @@
    },
    "devDependencies": {
       "@apollo/react-testing": "^4.0.0",
-      "@babel/core": "^7.14.3",
-      "@babel/preset-env": "^7.14.4",
-      "@testing-library/jest-dom": "^5.12.0",
-      "@testing-library/react": "^11.2.7",
-      "@testing-library/user-event": "^13.1.9",
-      "@types/node": "^15.9.0",
-      "@types/react": "^17.0.9",
-      "autoprefixer": "^10.2.6",
+      "@babel/core": "^7.15.0",
+      "@babel/preset-env": "^7.15.0",
+      "@testing-library/jest-dom": "^5.14.1",
+      "@testing-library/react": "^12.0.0",
+      "@testing-library/user-event": "^13.2.1",
+      "@types/node": "^16.4.13",
+      "@types/react": "^17.0.16",
+      "autoprefixer": "^10.3.1",
       "babel-eslint": "^10.1.0",
-      "babel-jest": "^27.0.2",
+      "babel-jest": "^27.0.6",
       "babel-plugin-macros": "^3.1.0",
-      "babel-plugin-styled-components": "^1.12.0",
+      "babel-plugin-styled-components": "^1.13.2",
       "casual": "^1.6.2",
-      "eslint": "^7.27.0",
+      "eslint": "^7.32.0",
       "eslint-config-airbnb": "^18.2.1",
       "eslint-config-prettier": "^8.3.0",
       "eslint-plugin-html": "^6.1.2",
@@ -72,14 +75,14 @@
       "eslint-plugin-prettier": "^3.4.0",
       "eslint-plugin-react": "^7.24.0",
       "eslint-plugin-react-hooks": "^4.2.0",
-      "jest": "^27.0.3",
-      "postcss": "^8.3.0",
-      "prettier": "^2.3.0",
+      "jest": "^27.0.6",
+      "postcss": "^8.3.6",
+      "prettier": "^2.3.2",
       "react-is": "^17.0.2",
       "react-test-renderer": "^17.0.2",
-      "tailwindcss": "^2.1.4",
-      "twin.macro": "^2.4.2",
-      "typescript": "^4.3.2"
+      "tailwindcss": "^2.2.7",
+      "twin.macro": "^2.6.2",
+      "typescript": "^4.3.5"
    },
    "jest": {
       "setupFilesAfterEnv": [
@@ -103,8 +106,7 @@
                [
                   "styled-components",
                   {
-                     "ssr": true,
-                     "displayName": true
+                     "ssr": true
                   }
                ]
             ]
@@ -118,8 +120,7 @@
                [
                   "styled-components",
                   {
-                     "ssr": true,
-                     "displayName": true
+                     "ssr": true
                   }
                ]
             ]
@@ -141,8 +142,7 @@
                [
                   "styled-components",
                   {
-                     "ssr": true,
-                     "displayName": true
+                     "ssr": true
                   }
                ]
             ]
