--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,10 @@
    "license": "MIT",
    "scripts": {
       "dev": "keystone-next",
-      "seed-data": "keystone-next --seed-data"
+      "deploy": "keystone-next build && keystone-next prisma migrate deploy",
+      "postinstall": "keystone-next postinstall",
+      "start": "keystone-next start",
+      "build": "keystone-next build"
    },
    "dependencies": {
       "@keystone-next/admin-ui": "^14.1.3",
