--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
    "name": "app-backend",
    "version": "1.0.0",
-   "private": true,
+   "private": false,
    "author": "VG",
    "license": "MIT",
    "scripts": {
@@ -21,14 +21,13 @@
       "@keystonejs/server-side-graphql-client": "^2.1.2",
       "@types/nodemailer": "^6.4.4",
       "dotenv": "^10.0.0",
-      "next": "^11.1.0",
+      "next": "^10.2.3",
       "nodemailer": "^6.6.3",
       "npm-check-updates": "^11.8.3",
       "react": "^17.0.2",
       "react-dom": "^17.0.2"
    },
    "devDependencies": {
-      "@typescript-eslint/eslint-plugin": "^4.29.1",
       "@typescript-eslint/parser": "^4.29.1",
       "babel-eslint": "^10.1.0",
       "eslint": "^7.32.0",
@@ -48,6 +47,5 @@
    },
    "engines": {
       "node": ">=14.0.0"
-   },
-   "repository": "https://github.com/wesbos/advanced-react"
+   }
 }
